--- a/index.html
+++ b/index.html
@@ -8,51 +8,33 @@
   <link rel="stylesheet" href="stylesheets/style.css">
 </head>
 <body>
-  <div class="text">
-    <div class="sub_text">
-      <h1>Hello. My name is Jaden Reyne Andrews.</h1>
-      <div class="image_stack">
-        <img class="images" src="img/meandjustininthefield.jpg" alt="meandjustininthefield">
-        <img class="images_long" src="img/Meandjustin.png" alt="Meandjustin">
-      </div>
+  <div id="main">
+    <div id="menu">
+      <img src="img/name.png" id="name" alt="" srcset="">
+      <a href="#title">Home</a><br>
+      <a href="#about">About</a><br>
+      <a href="#resume">Experience</a><br>
+      <a href="#work">Work</a><br>
+      <a href="#contact">Contact</a><br>
     </div>
-    <div class="sub_text">
-      <div id="image_stack">
-        <br>
-        <div id="image_queue">
-          <img class="images" id="images-exception"src="img/uni.png" alt="uni">
-          <img class="images" src="img/ncat.png" alt="NCAT Logo (North Carolina Agricultural and Technical State University)">
+    <div id="body">
+      <div class="container">
+        <div class="text-section" style="top: 0;" id="title">
+          <h2>Jaden Andrews</h2>
+          <h3>I am a Security Researcher</h3>
+          <a href="https://www.linkedin.com/in/jadenandrews831/" target="_blank"><img src="img/linkedin.png" class="social"></a>
+          <a href="https://github.com/jadenandrews831" target="_blank"><img src="https://img.icons8.com/win10/512/github.png" class="social" alt=""></a>
         </div>
+        <div class="text-section" style="top: 200px;"id="about"><h2>About Me</div>
+        <div class="text-section" style="top: 400px;" id="resume"><h2>Experience</h2></div>
+        <div class="text-section " style="top: 600px;" id="work">
+          <h2>Work</h2>
+          <div class="work">
+
+          </div>
+        </div>
+        <div class="text-section" style="top: 800px;" id="contact"><h2>Contact Me</h2></div>
       </div>
-      <h1>I am a junior Computer Science major here at NCAT.</h1>
     </div>
   </div>
-  <div id="list">
-    <h1>I am currently taking:</h1>
-    <ul>
-      <li>
-        Chemistry 107
-      </li>
-      <li>
-        Chemistry 117
-      </li>
-      <li>
-        Internet Systems
-      </li>
-      <li>
-        Programming Lanugages
-      </li>
-      <li>
-        Database Design
-      </li>
-      <li>
-        Introduction to Business Management
-      </li>
-    </ul>
-  </div>
-  <h1 class="hyperlink">
-    <a href="introduction.html">introduction.html</a>
-    <a href="little_prince/index.html">&#09little_prince.html</a>
-  </h1>
-</body>
 </html>
