--- a/index.html
+++ b/index.html
@@ -24,8 +24,21 @@
           <h3>I am a Security Researcher</h3>
           <a href="https://www.linkedin.com/in/jadenandrews831/" target="_blank"><img src="img/linkedin.png" class="social"></a>
           <a href="https://github.com/jadenandrews831" target="_blank"><img src="https://img.icons8.com/win10/512/github.png" class="social" alt=""></a>
+          <a href="mailto:jadenandrews831.1@gmail.com"><img src="https://www.freeiconspng.com/thumbs/email-icon/email-icon--clipart-best-22.png" class="social" alt=""></a>
         </div>
-        <div class="text-section" style="top: 200px;"id="about"><h2>About Me</div>
+        <div class="text-section" style="top: 200px;"id="about">
+          <h2>About Me</h2><br>
+          <div id="about_me">
+            <img src="img/profile.jpeg" id="pportrait" alt="Jaden's Profile Photo"><br>
+            <p>
+              I am a Security Researcher working at the Center of Excellence in 
+              Cybersecurity Research, Education, and Outreach at North Carolina A&T State University where I am 
+              responsible for coordinating Red Team Operations and Education. I primarily study Reverse Engineering and 
+              Binary Exploitation. I graduated from North Carolina A&T State University with a B.S. in 
+              Computer Science. 
+              </p>
+          </div>
+        </div>
         <div class="text-section" style="top: 400px;" id="resume"><h2>Experience</h2></div>
         <div class="text-section " style="top: 600px;" id="work">
           <h2>Work</h2>
